occupations fixes
